--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 using namespace std;
 
+// добавлено наследование, шаблоны, friendly 
+
 // 11)	Гостиница. Обязательные сущности: постоялец, номер, бронь.
 // 
 // Обязательно наличие конструктора копирования и 
@@ -64,16 +66,23 @@ public:
 
 	};
 
-// сведения о постояльце
+// сведения о персоне
 class person {
 private: 
 	string FIO; // ФИО
-	date birth; // дата рождения
+	date birth = date( 1, 1, 2001 ); // дата рождения
 public:
 	void setPerson(string fio, date b) {
 		FIO = fio;
 		birth = b;
 	}
+	void print() {
+		cout << FIO << " ";
+		birth.print();
+	}
+	friend class VIP_person; // дружественный VIP персона
+	template <typename T>
+	friend class employee; // дружественный шаблон работник
 };
 
 //сведения о номерах гостиницы
@@ -109,6 +118,43 @@ public:
 
 };
 
+// VIP персона
+class VIP_person : public person {
+private:
+	int VIP_status = 1; // уровень статуса
+public:
+	void setStatus(int s) {
+		VIP_status = s;
+	}
+	void printStatus() {
+		cout << "VIP status = " << VIP_status << endl;
+	}
+};
+
+template <typename T>
+//работник, также относится к персоне
+class employee : public person {
+private:
+	date start_work = date(1, 1, 2001); // дата начала работы
+	string post; // занятый пост
+	T salary; // зарплата // значение любого типа
+public:
+	employee(date s, string p, T sal) {
+		start_work = s;
+		post = p;
+		salary = sal;
+	}
+
+	void print() {
+		//cout << start_work << endl;
+		cout << FIO << " ";
+		birth.print();
+		cout << "Start work: ";
+		start_work.print();
+		cout << post << ", " << "salary: " << salary << "\n";
+	}
+};
+
 int main() {
 	date a(3, 1, 2000);
 	date b(a);
@@ -118,4 +164,20 @@ int main() {
 	cout << "-------------\n";
 	a.print();
 	b.print();
+	cout << "--------------------------\n";
+	VIP_person Ann;
+	cout << "VIP person: \n";
+	Ann.setPerson("Madison Ann Rat", a);
+	Ann.print();
+	Ann.printStatus();
+	cout << "----------------------------------\n";
+	cout << "emlpoyee1: \n";
+	employee<string> Ivan(a, "Cleaner", "food");
+	Ivan.setPerson("Ivanov Ivan Ivanovich", a);
+	Ivan.print();
+	cout << "----------------------------------\n";
+	cout << "emlpoyee2: \n";
+	employee<double> Anton(a, "Manager", 50000.5);
+	Anton.setPerson("Anton Antonov Antonovich", a);
+	Anton.print();
 }
